# sparkify-etl

./: README.md  pyproject.toml
github/: star-schema.drawio
src/: create_tables.py  dwh.cfg  etl.py  main.ipynb  sql_queries.py
